@@ -47,6 +47,11 @@ extern "C"
 {
 #endif
 
+/* float functions */
+    void sample_move_floatLE_sSs         (jack_default_audio_sample_t *dst, char *src, unsigned long nsamples, unsigned long src_skip);
+    void sample_move_dS_floatLE          (char *dst, jack_default_audio_sample_t *src, unsigned long nsamples, unsigned long dst_skip, dither_state_t *state);
+ 
+/* integer functions */
     void sample_move_d32u24_sSs          (char *dst, jack_default_audio_sample_t *src, unsigned long nsamples, unsigned long dst_skip, dither_state_t *state);
     void sample_move_d32u24_sS           (char *dst, jack_default_audio_sample_t *src, unsigned long nsamples, unsigned long dst_skip, dither_state_t *state);
     void sample_move_d24_sSs             (char *dst, jack_default_audio_sample_t *src, unsigned long nsamples, unsigned long dst_skip, dither_state_t *state);
