@@ -16,12 +16,17 @@ Marc-Olivier Barre
 Nedko Arnaudov
 Fernando Lopez-Lezcano
 Romain Moret
+Florian Faber
 
 ---------------------------
   Jackdmp changes log
 ---------------------------
 
-2008-07-14 Stephane Letz  <letz@grame.fr>
+2008-07-25 Stephane Letz  <letz@grame.fr>
+
+	* Florian Faber patch for 32 bit float (LE only) support to jack's alsa driver.
+
+2008-07-24 Stephane Letz  <letz@grame.fr>
 
 	* Fix server client OSX special notification mechanism, CoreAudio driver compilation back for 10.4.
 
